Extracted DaemonConnection into an interface, opening up the possibility of different kinds of daemons (e.g. in process, remote host).